--- a/UCR.Negotium/UserControls/Depreciaciones.xaml
+++ b/UCR.Negotium/UserControls/Depreciaciones.xaml
@@ -17,12 +17,24 @@
         </Border>
         <Border Grid.Row="1" Style="{StaticResource borderStyle}">
             <Grid Margin="10">
-                <DataGrid Grid.Row="2" ItemsSource="{Binding DTDepreciaciones}"
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="7*"/>
+                    <RowDefinition Height="3*"/>
+                </Grid.RowDefinitions>
+                <DataGrid ItemsSource="{Binding DTDepreciaciones}"
                           SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
                           Margin="30,5,30,15" ColumnWidth="100" Name="datagridDepreciaciones"
                           Loaded="datagridDepreciaciones_Loaded">
 
                 </DataGrid>
+
+                <Grid Grid.Row="2" Margin="30,5,30,15">
+                    <TextBlock Text="Total Depreciaciones por Año:" FontSize="14"/>
+                    <DataGrid Margin="0,25,0,0" ItemsSource="{Binding DTTotalesDepreciaciones, UpdateSourceTrigger=PropertyChanged}"
+                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                           ColumnWidth="100">
+                    </DataGrid>
+                </Grid>
             </Grid>
         </Border>
     </Grid>
