--- a/UCR.Negotium/AnalisisAmbientalWindow.xaml
+++ b/UCR.Negotium/AnalisisAmbientalWindow.xaml
@@ -1,5 +1,5 @@
-﻿<Controls:MetroWindow x:Class="UCR.Negotium.Dialogs.SeleccionarEncargado"
-xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Controls:MetroWindow x:Class="UCR.Negotium.AnalisisAmbientalWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,9 +8,8 @@ xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
-        Title="Negotium v1.0" Height="300" Width="350">
+        Title="Análisis Ambiental | Negotium v1.0" Height="550" Width="950">
     <Grid Margin="10">
-
+        
     </Grid>
-    </Controls:MetroWindow>
-
+</Controls:MetroWindow>
