--- a/UCR.Negotium/Dialogs/RegistrarInversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarInversion.xaml
@@ -10,17 +10,26 @@
         mc:Ignorable="d"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
-        Title="Inversión | Negotium v1.0" Height="400" Width="450">
+        Title="Inversión | Negotium v1.0" Height="400" Width="470">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1.3*"/>
             <RowDefinition Height="6.5*"/>
-            <RowDefinition Height="2.5*"/>
+            <RowDefinition Height="2.2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+        <Grid Grid.ColumnSpan="2">
+            <RichTextBox FontSize="14" BorderThickness="0">
+                <FlowDocument>
+                    <Paragraph>
+                        <Run Text="Registro de Inversiones mayores a 1 Año (Menores a 1 Año registrarse como costos)"/>
+                    </Paragraph>
+                </FlowDocument>
+            </RichTextBox>
+        </Grid>
         <StackPanel Grid.Row="1">
             <Grid Style="{StaticResource gridFormStyle}">
                 <Label Content="Nombre de la Inversión:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
@@ -75,10 +84,10 @@
         </StackPanel>
         <Grid Grid.Row="2" Grid.ColumnSpan="2">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
-                     HorizontalAlignment="Left" Margin="82,30,0,0" Grid.Row="2" VerticalAlignment="Top"/>
+                     HorizontalAlignment="Left" Margin="90,30,0,0" Grid.Row="2" VerticalAlignment="Top"/>
 
             <Button Name="btnCancelar" Content="Cancelar" Width="75"
-                    HorizontalAlignment="Right" Margin="0,30,82,0" Grid.Row="2" VerticalAlignment="Top"
+                    HorizontalAlignment="Right" Margin="0,30,90,0" Grid.Row="2" VerticalAlignment="Top"
                     Click="btnCancelar_Click"/>
         </Grid>
     </Grid>
