--- a/UCR.Negotium/Dialogs/RegistrarTasaInteresFinanciamiento.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarTasaInteresFinanciamiento.xaml
@@ -8,22 +8,13 @@
         mc:Ignorable="d"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="NoResize"
-        Title="Porcentaje Tasa Interés | Negotium v1.0" Height="450" Width="400">
+        Title="Porcentaje Tasa Interés | Negotium v1.0" Width="400" Height="Auto" SizeToContent="Height">
     <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.5*"/>
-            <RowDefinition Height="8.5*"/>
-            <RowDefinition Height="2*"/>
-        </Grid.RowDefinitions>
-        <DataGrid CanUserSortColumns="False" SelectionUnit="Cell" Name="dgPorcentajes"
-                ItemsSource="{Binding TasaInteres, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
-                BorderThickness="1"
-                BorderBrush="{DynamicResource AccentColorBrush}"
-                AllowDrop="False" 
-                CanUserAddRows="False" 
-                CanUserDeleteRows="False" 
-                AutoGenerateColumns="False"
-                Margin="27,10,27,10" Grid.Row="1">
+        <DataGrid CanUserSortColumns="False" SelectionUnit="Cell" x:Name="dgTasaVariable"
+                ItemsSource="{Binding InteresVariable, UpdateSourceTrigger=PropertyChanged,Mode=TwoWay}" 
+                BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}" AllowDrop="False" 
+                CanUserAddRows="False" CanUserDeleteRows="False" AutoGenerateColumns="False"
+                Margin="27,20,27,80" Grid.Row="1" Height="250">
 
             <DataGrid.Style>
                 <Style BasedOn="{StaticResource MetroDataGrid}" TargetType="{x:Type DataGrid}">
@@ -33,9 +24,9 @@
 
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True"
-                    Binding="{Binding Path=Ano}" Header="Año" Width="4*"/>
+                    Binding="{Binding Path=AnoInteres}" Header="Año" Width="4*"/>
                 <DataGridTextColumn
-                    Binding="{Binding Path=PorcentajeIncremento}" Header="Porcentaje (%)" Width="6*">
+                    Binding="{Binding Path=PorcentajeInteres}" Header="Porcentaje (%)" Width="6*">
                     <DataGridTextColumn.EditingElementStyle>
                         <Style TargetType="{x:Type TextBox}">
                             <EventSetter Event="TextChanged" Handler="tbDatosPositivos_TextChanged" />
@@ -44,7 +35,7 @@
                 </DataGridTextColumn>
             </DataGrid.Columns>
         </DataGrid>
-        <Grid Grid.Row="2" Grid.ColumnSpan="2">
+        <Grid Grid.Row="2" Grid.ColumnSpan="2" Height="70" VerticalAlignment="Bottom">
             <Button  Name="btnGuardar" Content="Guardar" Click="btnGuardar_Click" Width="75"
                      HorizontalAlignment="Left" Margin="82,15,0,0" Grid.Row="2" VerticalAlignment="Top"/>
 
