--- a/UCR.Negotium/RegistrarProyectoWindow.xaml
+++ b/UCR.Negotium/RegistrarProyectoWindow.xaml
@@ -54,15 +54,47 @@
             </TabItem>
             <TabItem Header="Flujo de Caja">
                 <Grid Background="AliceBlue" Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="505*"/>
+                        <ColumnDefinition Width="148*"/>
+                    </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="7*"/>
                         <RowDefinition Height="90*"/>
                     </Grid.RowDefinitions>
-                    <Border Style="{StaticResource borderStyle}" Background="LightBlue">
+                    <Border Style="{StaticResource borderStyle}" Background="LightBlue" Grid.ColumnSpan="2">
                         <TextBlock Text="Flujo de Caja" Style="{StaticResource textTitleStyle}"/>
                     </Border>
-                    <Border Grid.Row="1" Style="{StaticResource borderStyle}">
+                    <Border Grid.Row="1" Style="{StaticResource borderStyle}" Grid.ColumnSpan="2">
+                        <Grid Margin="10">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="8*"/>
+                                <RowDefinition Height="2*"/>
+                            </Grid.RowDefinitions>
 
+                            <DataGrid ItemsSource="{Binding DTFlujoCaja, UpdateSourceTrigger=PropertyChanged}"
+                          SelectionUnit="FullRow" BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
+                          Margin="30,15,30,15" ColumnWidth="100" CanUserSortColumns="False"
+                          Name="dgFlujoCaja" Loaded="dgFlujoCaja_Loaded">
+
+                            </DataGrid>
+                            <StackPanel Grid.Row="1" Style="{StaticResource horizontalPanelFormStyle}">
+                                <Label Content="Tasa de Costo de Capital: " Margin="30,0,0,37" FontSize="14" FontWeight="Bold"/>
+                                <TextBox Margin="0,0,0,57"
+                                         Text="{Binding ProyectoSelected.TasaCostoCapitalString, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False" Width="130"/>
+                                <Label Content="TIR: " Margin="50,0,0,37" FontSize="14" FontWeight="Bold"/>
+                                <TextBox Margin="0,0,0,57" Text="{Binding TIR, UpdateSourceTrigger=PropertyChanged}" Width="130" IsEnabled="False"/>
+                                <Label Content="VAN: " Margin="30,0,0,37" FontSize="14" FontWeight="Bold"/>
+                                <TextBox Text="{Binding VAN, UpdateSourceTrigger=PropertyChanged}" IsEnabled="False" Margin="0,0,0,57" Width="130"/>
+                                <Grid Margin="60,0,30,7">
+                                    <iconPacks:PackIconModern Width="16" Height="16" Kind="Box" Foreground="Teal"
+                                                  Margin="0,7,140,0" HorizontalAlignment="Right"/>
+                                    <Label Margin="30,0,0,0" HorizontalAlignment="Right">
+                                        <Hyperlink Name="lbDetalleIndicadores" Click="lbDetalleIndicadores_Click">Detalle de Indicadores</Hyperlink>
+                                    </Label>
+                                </Grid>
+                            </StackPanel>
+                        </Grid>
                     </Border>
                 </Grid>
             </TabItem>
