--- a/UCR.Negotium/Dialogs/PoseeEncargadoConfirm.xaml
+++ b/UCR.Negotium/Dialogs/PoseeEncargadoConfirm.xaml
@@ -7,11 +7,17 @@
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
-        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
+        WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Closing="MetroWindow_Closing"
         Title="Negotium v1.0" Height="300" Width="350">
     <Grid Margin="10">
-        <RichTextBox x:Name="tbMensajeConfirm" Margin="30,30,30,100" IsReadOnly="True" FontSize="14"
-                     BorderThickness="0" Background="GhostWhite"/>
+        <RichTextBox Margin="30,30,30,100" IsReadOnly="True" FontSize="14"
+                     BorderThickness="0" Background="GhostWhite">
+            <FlowDocument>
+                <Paragraph>
+                    <Run Text="Se recomienda aceptar su proyecto cuando la Tasa Interna de Retorno (TIR) es mayor a la Tasa de Costo de Capital y a su vez cuando se obtiene un VAN positivo."/>
+                </Paragraph>
+            </FlowDocument>
+        </RichTextBox>
         <Button x:Name="btnSi" Content="Si" HorizontalAlignment="Left" Margin="60,176,0,0" 
                 VerticalAlignment="Top" Width="75" Click="btnSi_Click"/>
         <Button x:Name="btnNo" Content="No" HorizontalAlignment="Left" Margin="196,176,0,0" 
