--- a/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
+++ b/UCR.Negotium/Dialogs/RegistrarReinversion.xaml
@@ -10,18 +10,21 @@
         mc:Ignorable="d"
         BorderThickness="1" BorderBrush="{DynamicResource AccentColorBrush}"
         WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize"
-        Title="Inversión | Negotium v1.0" Height="490" Width="450">
+        Title="Reinversión | Negotium v1.0" Height="490" Width="450">
     <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="1*"/>
-            <RowDefinition Height="6.5*"/>
-            <RowDefinition Height="2.5*"/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="7.5*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="200"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="1">
+            <Grid Style="{StaticResource gridFormStyle}">
+                <Label Content="Vincular a Inversión Depreciable:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
+            </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <Label Content="Nombre de la Reinversión:" HorizontalAlignment="Right" VerticalAlignment="Center"/>
             </Grid>
@@ -48,13 +51,24 @@
             </Grid>
         </StackPanel>
         <StackPanel Grid.Row="1" Grid.Column="1" Margin="0,0,27,0">
+            <StackPanel Style="{StaticResource horizontalPanelFormStyle}" Margin="0,10,0,10">
+                <CheckBox FlowDirection="LeftToRight" Name="cbInversion" IsChecked="{Binding VincularInversion, UpdateSourceTrigger=PropertyChanged}"
+                          Loaded="cbInversion_Loaded" Checked="cbInversion_Checked">
+                    <TextBlock Text="Si"/>
+                </CheckBox>
+                <CheckBox FlowDirection="LeftToRight" Margin="10,0,0,0" x:Name="cbNoInversion" 
+                          Checked="cbNoInversion_Checked">
+                    <TextBlock Text="No"/>
+                </CheckBox>
+            </StackPanel>
             <Grid Style="{StaticResource gridFormStyle}">
-                <TextBox Text="{Binding Reinversion.DescripcionRequerimiento}" Name="tbDescReinversion"
+                <TextBox Text="{Binding Reinversion.DescripcionRequerimiento, UpdateSourceTrigger=PropertyChanged}" Name="tbDescReinversion"
                          TextChanged="tbDescReinversion_TextChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding Inversiones}" SelectedValuePath="CodRequerimientoInversion"
-                                          SelectedValue="{Binding Reinversion.CodRequerimientoInversion}" />
+                                          SelectedValue="{Binding Reinversion.CodRequerimientoInversion}" 
+                          Name="cbxInversiones" SelectionChanged="cbxInversiones_SelectionChanged"/>
             </Grid>
             <Grid Style="{StaticResource gridFormStyle}">
                 <ComboBox ItemsSource="{Binding AnosDisponibles}" 
